<resources>
    <string name="app_name">Cipelist</string>
    <string name="settings">Settings</string>
    <string name="action_about">About</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!--- Main Activity Settings Menu -->
    <string name="new_search">New Search</string>
    <string name="add_item">Add Item</string>
    <string name="action_swipe">Swipe</string>
    <string name="anonymous_login">Anonymous Login</string>
    <string name="logout">Logout</string>

    <!-- Loading Strings -->
    <string name="generating_shopping_list">Generating Shopping List</string>

    <!-- Login Screen -->
    <string name="cipelist_logo">Cipelist Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="anon_login">Don\'t want to sign up? Log in anonymously!</string>

    <!-- Navigation Drawer -->
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>

    <!-- Search Filter -->
    <string name="find_awesome_recipes">Find Awesome Recipes!</string>
    <string name="search_term">Search Term</string>
    <string name="enter_your_search_words_here">Enter your search words here</string>

    <string name="cuisine">Cuisine</string>
    <string-array name="cuisine_items">
        <item>American</item>
        <item>Italian</item>
        <item>Asian</item>
        <item>Mexican</item>
        <item>Southern &amp; Soul Food</item>
        <item>French</item>
        <item>Southwestern</item>
        <item>Barbecue</item>
        <item>Indian</item>
        <item>Chinese</item>
        <item>Cajun &amp; Creole</item>
        <item>English</item>
        <item>Mediterranean</item>
        <item>Greek</item>
        <item>Spanish</item>
        <item>German</item>
        <item>Thai</item>
        <item>Moroccan</item>
        <item>Irish</item>
        <item>Japanese</item>
        <item>Cuban</item>
        <item>Hawaian</item>
        <item>Swedish</item>
        <item>Hungarian</item>
        <item>Portuguese</item>
    </string-array>

    <string name="allergies">Allergies</string>
    <string-array name="allergy_items">
        <item>Dairy</item>
        <item>Egg</item>
        <item>Gluten</item>
        <item>Peanut</item>
        <item>Seafood</item>
        <item>Sesame</item>
        <item>Soy</item>
        <item>Sulfite</item>
        <item>Tree Nut</item>
        <item>Wheat</item>
    </string-array>

    <string name="course">Course</string>
    <string-array name="course_items">
        <item>Main Dishes</item>
        <item>Desserts</item>
        <item>Side Dishes</item>
        <item>Lunch</item>
        <item>Snacks</item>
        <item>Appetizers</item>
        <item>Salads</item>
        <item>Breads</item>
        <item>Breakfast and Brunch</item>
        <item>Soups</item>
        <item>Beverages</item>
        <item>Condiments and Sauces</item>
        <item>Cocktails</item>
    </string-array>

    <string name="dietary_restriction">Dietary Restriction</string>
    <string name="diet">Diet</string>
    <string name="cooking_time">Cooking Time</string>
    <string name="number_of_recipes">Number of Recipes</string>
    <string name="picture_of_recipe">Picture of Recipe</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="_1_hr">1 hour</string>
    <string name="_7_recipes">7 recipes</string>
    <string name="recipe_detail_image">Recipe Detail Image</string>
    <string name="view_source">View Online</string>
    <string name="clear_searches">Clear Searches</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="select_action">Select Action</string>
    <string name="enter_query_phrases">Enter query phrases</string>
    <string name="an_image_of_a_recipe">An image of a recipe</string>
    <string name="no_thanks">No Thanks!</string>
    <string name="accept">Accept</string>
    <string name="button_for_disliked_recipes">Button for disliked recipes</string>
    <string name="button_for_liked_recipes">Button for liked recipes</string>
    <string name="anon">Anonymous</string>
    <string name="query_search_id">search_id = ?</string>
    <string name="default_user">Default User</string>
    <string name="logging_in">Logging in</string>
    <string name="signed_in_as">"Signed in as: "</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="registering_user">Registering User</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="need_email">You need to enter an email</string>
    <string name="need_password">You need to enter a password</string>
    <string name="number_of_recipes_main">"No. Recipes: "</string>
    <string name="search">"Search "</string>
    <string name="date_format_one">yyyy-MM-dd</string>
    <string name="date_format_two">MMMM d</string>
    <string name="query_user_id">user_id = ?</string>
    <string name="n_a">Not Available</string>
    <string name="about_selected">About Cipelist</string>
    <string name="_ingredients">" ingredients"</string>
    <string name="recipes">Recipes</string>
    <string name="groceries">Groceries</string>
    <string name="search_id">searchId</string>
    <string name="title">title</string>
    <string name="default_value">default</string>
    <string name="recipe_id">recipeId</string>
    <string name="recipe_id_query">m_id = ?</string>
    <string name="prep_time">"Preparation Time: "</string>
    <string name="yummly_url">http://api.yummly.com/v1/api/</string>
    <string name="q">q</string>
    <string name="max_time_in_seconds">maxTotalTimeInSeconds</string>
    <string name="start">start</string>
    <string name="empty_string" />
    <string name="utf_8">UTF-8</string>
    <string name="demo_json">demo.json</string>
    <string name="sel_diet">Select Diet</string>
    <string name="sel_cuisine">Select Cuisine</string>
    <string name="sel_allergies">Select Allergies</string>
    <string name="sel_courses">Select Courses</string>
    <string name="_15_min">15 min</string>
    <string name="_30_min">30 min</string>
    <string name="_1_hour">1 hour</string>
    <string name="_2_hours">2 hours</string>
    <string name="unlimited">Unlimited</string>
    <string name="_recipes">" recipes"</string>
    <string name="none_selected">None Selected</string>
    <string name="_388">388^</string>
    <string name="_389">389^</string>
    <string name="_390">390^</string>
    <string name="_386">386^</string>
    <string name="_387">387^Lacto-ovo vegetarian</string>
    <string name="course_main_dish">course^course-Main Dishes</string>
    <string name="course_course">course^course-</string>
    <string name="ampersand"><![CDATA[&amp;]]></string>
    <string name="cuisine_cuisine">cuisine^cuisine-</string>
    <string name="_396">396^</string>
    <string name="_free">-Free</string>
    <string name="_397">397^</string>
    <string name="_393">393^</string>
    <string name="_394">394^</string>
    <string name="_398">398^</string>
    <string name="_399">399^</string>
    <string name="_400">400^</string>
    <string name="_401">401^</string>
    <string name="_395">395^</string>
    <string name="_392">392^</string>
    <string name="saving_recipes">Saving Recipes</string>
    <string name="loading_more_recipes">Loading more recipes</string>
    <string name="loading_recipes">Loading Recipes</string>
    <string name="pasta">pasta</string>
    <string name="pizza">pizza</string>
    <string name="burger">burger</string>
    <string name="_json">.json</string>
    <string name="cook_time">"Cooking Time: "</string>
    <string name="background_image">Background image</string>
    <string name="grocery_stores">Grocery Stores</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="hint_main">You don\'t seem to have any searches, \n press the button to start!</string>
    <string name="new_search_swiper">Something went wrong, \n press here to try a new search</string>
    <string name="number_of_servings">"Number of Servings: "</string>
    <string name="recipe_source">"Recipe Source: "</string>

    <string-array name="diet_items">
        <item>Lacto Vegetarian</item>
        <item>Ovo Vegetarian</item>
        <item>Pescetarian</item>
        <item>Vegan</item>
        <item>Vegetarian</item>
    </string-array>

</resources>
