<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_test"
        android:orderInCategory="103"
        android:title="test"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_new_search"
        android:orderInCategory="102"
        android:title="@string/new_search"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_item"
        android:orderInCategory="104"
        android:title="@string/add_item"
        app:showAsAction="never" />
</menu>
